🚀 Upgrade to production-grade attendance + attention pipeline
- YOLO26 person detection (yolo26s) with auto device selection (CUDA/MPS/CPU)
- DeepSORT tracking with ReID embedder (MobileNet)
- YOLO Pose estimation for hand raise, head direction, phone detection
- Persistent student identity via MobileNetV3 embeddings (student_registry.json)
- Confidence-weighted attention scoring with rolling window smoothing
- Automatic attendance tracking with configurable thresholds
- Structured CSV report (attendance_report.csv) with 13 columns
- Annotated video output with bounding boxes and status labels
- CLI with argparse: --video, --camera, --config, --headless, --device
- Central config.yaml for all tunable parameters
- Multi-camera session support (camera_id + session_id)
- No MediaPipe dependency — pure YOLO + PyTorch stack
- Tested on 44-student classroom video (47 students detected)

--- a/classroom_attention/requirements.txt
+++ b/classroom_attention/requirements.txt
@@ -1,10 +1,11 @@
-ultralytics
+ultralytics>=8.3.0
 opencv-python
 numpy
 deep-sort-realtime
-mediapipe
 torch
+torchvision
 fastapi
 uvicorn
 tqdm
-mediapipe==0.10.9
+pyyaml
+scikit-learn
