--- a/classroom_attention/config.yaml
+++ b/classroom_attention/config.yaml
@@ -22,8 +22,13 @@ attendance:
   min_track_frames: 20
 
 attention:
-  smoothing_window: 10
+  ema_alpha: 0.08
   confidence_weighted: true
+  enter_attentive: 0.2
+  exit_attentive: 0.0
+  enter_distracted: -0.2
+  exit_distracted: 0.0
+  min_state_hold: 15
   weights:
     looking_forward: 1.0
     hand_raised: 1.0
